--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
 </head>
 <body>
     <header>
-        <img src="imagens/Logo.png" alt="Logo do site">
+        <img src="imagens/LogoSemFundo.png" alt="Logo do site">
         <h1>ALAGOINHAS EVENTOS</h1>
-    
-        <menu class="material-symbols-outlined">menu</menu>
 
-        <nav>
-            <ul class="menu">
-                <li class="ItensMenu"><a href="#">Home</a></li>
-                <li class="ItensMenu"><a href="#">Eventos</a></li>
-                <li class="ItensMenu"><a href="#">Contato</a></li>
-            </ul>
+        <ul id="NavMenu">
+            <li class="MenuItens"><a href="">inicio</a></li>
+            <li class="MenuItens"><a href="">eventos</a></li>
+            <li class="MenuItens"><a href="">contato</a></li>
+            <li class="MenuItens"><a href="">quem somos</a></li>
+        </ul>
         </header>
     
 </body>
