Criacao do formulario

--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
 </head>
 <body>
     <header>
-        <img src="imagens/LogoSemFundo.png" alt="Logo do site">
-        <h1>ALAGOINHAS EVENTOS</h1>
+        <div id="Logo">
+            <img src="imagens/LogoSemFundo.png" alt="Logo do site">
+            <h1>ALAGOINHAS EVENTOS</h1>
+        </div>
 
         <ul id="NavMenu">
             <li class="MenuItens"><a href="">inicio</a></li>
             <li class="MenuItens"><a href="">eventos</a></li>
             <li class="MenuItens"><a href="">contato</a></li>
             <li class="MenuItens"><a href="">quem somos</a></li>
+            <li><a href="FormularioEvento.html">adicionar evento</a></li>
         </ul>
         </header>
+
+        <section id="eventos"></section>
     
 </body>
 </html>
