--- a/FormularioEvento.html
+++ b/FormularioEvento.html
@@ -9,9 +9,9 @@
 <body>
     <form id="evento">
         <h1>Formulário de Eventos</h1>
-        <input type="text" id="eventName" placeholder="Nome do Evento" required>
-        <input type="date" id="eventDate" required>
-        <textarea id="eventDescription" placeholder="Descrição do Evento"></textarea>
+        <input type="text" id="NomeEvento" placeholder="Nome do Evento" required>
+        <input type="date" id="DataEvento" required>
+        <textarea id="DescricaoEvento" placeholder="Descrição do Evento"></textarea>
         <button type="submit">Adicionar Evento</button>
         <p id="mensagem" style="display: none; color: white; text-align: center; font-size: 1.4rem;">Formulário enviado com sucesso!</p>
     </form>
