--- a/index.html
+++ b/index.html
@@ -16,14 +16,34 @@
 
         <ul id="NavMenu">
             <li class="MenuItens"><a href="">inicio</a></li>
-            <li class="MenuItens"><a href="">eventos</a></li>
+            <li class="MenuItens"><a href="#eventos">eventos</a></li>
             <li class="MenuItens"><a href="">contato</a></li>
             <li class="MenuItens"><a href="">quem somos</a></li>
             <li><a href="FormularioEvento.html">adicionar evento</a></li>
         </ul>
         </header>
 
-        <section id="eventos"></section>
+        <section id="eventos">
+            <h1>EVENTOS</h1>
+            <div class="evento">
+                <img src="imagens/LogoSemFundo.png" alt="">
+                <h2>Nome do Evento</h2>
+                <p>Data: 01/01/2023</p>
+                <p>Descrição: Descrição do evento.</p>
+            </div>
+            <div class="evento">
+                <img src="imagens/LogoSemFundo.png" alt="">
+                <h2>Nome do Evento</h2>
+                <p>Data: 01/01/2023</p>
+                <p>Descrição: Descrição do evento.</p>
+            </div>
+            <div class="evento">
+                <img src="imagens/LogoSemFundo.png" alt="">
+                <h2>Nome do Evento</h2>
+                <p>Data: 01/01/2023</p>
+                <p>Descrição: Descrição do evento.</p>
+            </div>
+        </section>
     
 </body>
 </html>
