--- a/FormularioEvento.html
+++ b/FormularioEvento.html
@@ -11,6 +11,8 @@
         <h1>Formulário de Eventos</h1>
         <input type="text" id="NomeEvento" placeholder="Nome do Evento" required>
         <input type="date" id="DataEvento" required>
+        <input type="text" placeholder="Contato" required>
+        <input type="text" placeholder="Localização" required>
         <textarea id="DescricaoEvento" placeholder="Descrição do Evento"></textarea>
         <button type="submit">Adicionar Evento</button>
         <p id="mensagem" style="display: none; color: white; text-align: center; font-size: 1.4rem;">Formulário enviado com sucesso!</p>
