--- a/index.html
+++ b/index.html
@@ -16,12 +16,20 @@
 
         <ul id="NavMenu">
             <li class="MenuItens"><a href="">inicio</a></li>
+            <li class="MenuItens"><a href="#quemsomos">quem somos</a></li>
             <li class="MenuItens"><a href="#eventos">eventos</a></li>
             <li class="MenuItens"><a href="">contato</a></li>
-            <li class="MenuItens"><a href="">quem somos</a></li>
             <li><a href="FormularioEvento.html">adicionar evento</a></li>
         </ul>
         </header>
+
+        <section id="quemsomos">
+            <h1>QUEM SOMOS?</h1>
+            <img src="imagens/quem somos 2.png" alt="">
+            <p>O Calendário de Eventos de Alagoinhas é o seu guia oficial para tudo o que acontece na cidade! Conectamos moradores e visitantes aos melhores eventos culturais, esportivos e de entretenimento. Aqui, você encontra desde grandes festivais até encontros comunitários, sempre de forma simples e acessível.
+
+                📅 Fique por dentro e aproveite!</p>
+        </section>
 
         <section id="eventos">
             <h1>EVENTOS</h1>
