--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
                 <p>Data: 01/01/2023</p>
                 <p>Descrição: Descrição do evento.</p>
             </div>
-        </section>
+        </section>]
+        <footer>
+            <h1>CONTATO</h1>
+            <a href="https://www.instagram.com/matosdavi_/" target="_blank"><img src="imagens/Instagram_logo.png" alt=""></a>
+            <a href="https://wa.me/5575999901566" target="_blank"><img src="imagens/wpp logo.png" alt=""></a>
+
+        </footer>
     
 </body>
 </html>
