--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="Logo">
-            <img src="imagens/LogoSemFundo.png" alt="Logo do site">
+            <img src="imagens/Alagoinhas Eventos (3).png" alt="Logo do site">
             <h1>ALAGOINHAS EVENTOS</h1>
         </div>
 
@@ -18,7 +18,7 @@
             <li class="MenuItens"><a href="">inicio</a></li>
             <li class="MenuItens"><a href="#quemsomos">quem somos</a></li>
             <li class="MenuItens"><a href="#eventos">eventos</a></li>
-            <li class="MenuItens"><a href="">contato</a></li>
+            <li class="MenuItens"><a href="#contato">contato</a></li>
             <li><a href="FormularioEvento.html">adicionar evento</a></li>
         </ul>
         </header>
@@ -34,7 +34,7 @@
         <section id="eventos">
             <h1>EVENTOS</h1>
             <div class="evento">
-                <img src="imagens/LogoSemFundo.png" alt="">
+                <img src="imagens/quem somos 2.png">
                 <h2>Nome do Evento</h2>
                 <p>Data: 01/01/2023</p>
                 <p>Descrição: Descrição do evento.</p>
@@ -52,7 +52,7 @@
                 <p>Descrição: Descrição do evento.</p>
             </div>
         </section>]
-        <footer>
+        <footer id="contato">
             <h1>CONTATO</h1>
             <a href="https://www.instagram.com/matosdavi_/" target="_blank"><img src="imagens/Instagram_logo.png" alt=""></a>
             <a href="https://wa.me/5575999901566" target="_blank"><img src="imagens/wpp logo.png" alt=""></a>
