--- a/index.html
+++ b/index.html
@@ -3,61 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
     <title>Alagoinhas Eventos</title>
+    <link rel="shortcut icon" href="imagens/favicon portifolio.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <header>
-        <div id="Logo">
-            <img src="imagens/Alagoinhas Eventos (3).png" alt="Logo do site">
-            <h1>ALAGOINHAS EVENTOS</h1>
-        </div>
-
-        <ul id="NavMenu">
-            <li class="MenuItens"><a href="">inicio</a></li>
-            <li class="MenuItens"><a href="#quemsomos">quem somos</a></li>
-            <li class="MenuItens"><a href="#eventos">eventos</a></li>
-            <li class="MenuItens"><a href="#contato">contato</a></li>
-            <li><a href="FormularioEvento.html">adicionar evento</a></li>
-        </ul>
+    <div id="bordao"><h2>Os melhores eventos você encontra aqui!</h2></div>
+       <!-- Menu do site -->
+        <header>
+        <img id="logo" src="imagens/logo com nome.png.png" alt="logo">
+            <nav id="menu">
+                <ul id="ListaMenu">
+                    <li class="MenuItens"><a href="#Sobre">quem somos</a></li>
+                    <li class="MenuItens"><a href="#eventos">eventos</a></li>
+                    <li class="MenuItens"><a href="#Tecnologias">contato</a></li></li>
+                  
+                </ul>
+            </nav>
         </header>
+        <!-- Inicio do site -->
+        <section id="inicio">
+            <h1 id="EuSou">
+                <span id="Ola">Olá pessoas,</span> <br>SOMOS A <br> ALAGOINHAS EVENTOS <br><span id="SejaBem">Seja bem-vindos ao nosso website</span></h1>
+                <img id="eventoimg" src="imagens/evento.avif" alt="">
 
-        <section id="quemsomos">
-            <h1>QUEM SOMOS?</h1>
-            <img src="imagens/quem somos 2.png" alt="">
-            <p>O Calendário de Eventos de Alagoinhas é o seu guia oficial para tudo o que acontece na cidade! Conectamos moradores e visitantes aos melhores eventos culturais, esportivos e de entretenimento. Aqui, você encontra desde grandes festivais até encontros comunitários, sempre de forma simples e acessível.
-
-                📅 Fique por dentro e aproveite!</p>
         </section>
 
         <section id="eventos">
-            <h1>EVENTOS</h1>
-            <div class="evento">
-                <img src="imagens/quem somos 2.png">
-                <h2>Nome do Evento</h2>
-                <p>Data: 01/01/2023</p>
-                <p>Descrição: Descrição do evento.</p>
+            <h1 id="h1eventos">EVENTOS</h1>
+            <div id="EventosContainer">
+                <div class="EventosItens">
+                    <img class="ImagensProjetos" src="imagens/evento img.jpg" alt="">
+                    <h2>Título do evento</h2>
+                    <p>Descrição do evento</p>
+                </div>
+                <div class="EventosItens">
+                    <img class="ImagensProjetos" src="imagens/evento img.jpg" alt="">
+                    <h2>Título do evento</h2>
+                    <p>Descrição do evento</p>
+                </div>
+                <div class="EventosItens">
+                    <img class="ImagensProjetos" src="imagens/evento img.jpg" alt="">
+                    <h2>Título do evento</h2>
+                    <p>Descrição do evento</p>
+                </div>
+                <div class="EventosItens">
+                    <img class="ImagensProjetos" src="imagens/evento img.jpg" alt="">
+                    <h2>Título do evento</h2>
+                    <p>Descrição do evento</p>
+                </div>
+                <div class="EventosItens">
+                    <img class="ImagensProjetos" src="imagens/evento img.jpg" alt="">
+                    <h2>Título do evento</h2>
+                    <p>Descrição do evento</p>
+                </div>
+                <div class="EventosItens">
+                    <img class="ImagensProjetos" src="imagens/evento img.jpg" alt="">
+                    <h2>Título do evento</h2>
+                    <p>Descrição do evento</p>
+                </div>
+                <div class="EventosItens">
+                    <img class="ImagensProjetos" src="imagens/evento img.jpg" alt="">
+                    <h2>Título do evento</h2>
+                    <p>Descrição do evento</p>
+                </div>
+                <div class="EventosItens">
+                    <img class="ImagensProjetos" src="imagens/evento img.jpg" alt="">
+                    <h2>Título do evento</h2>
+                    <p>Descrição do evento</p>
+                </div>
             </div>
-            <div class="evento">
-                <img src="imagens/LogoSemFundo.png" alt="">
-                <h2>Nome do Evento</h2>
-                <p>Data: 01/01/2023</p>
-                <p>Descrição: Descrição do evento.</p>
-            </div>
-            <div class="evento">
-                <img src="imagens/LogoSemFundo.png" alt="">
-                <h2>Nome do Evento</h2>
-                <p>Data: 01/01/2023</p>
-                <p>Descrição: Descrição do evento.</p>
-            </div>
-        </section>]
-        <footer id="contato">
+        </section>
+        <!-- Seção de Contato -->
+         <footer>
             <h1>CONTATO</h1>
-            <a href="https://www.instagram.com/matosdavi_/" target="_blank"><img src="imagens/Instagram_logo.png" alt=""></a>
-            <a href="https://wa.me/5575999901566" target="_blank"><img src="imagens/wpp logo.png" alt=""></a>
-
-        </footer>
-    
+            <div id="RedesSociais">
+                <img src="imagens/wpp logo.png" alt="logo whatsapp">
+                <img src="imagens/Instagram_logo.png" alt="logo instagram">
+            </div>
+         </footer>
 </body>
 </html>
