--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <img id="logo" src="imagens/logo com nome.png.png" alt="logo">
             <nav id="menu">
                 <ul id="ListaMenu">
-                    <li class="MenuItens"><a href="#Sobre">quem somos</a></li>
+                    <li class="MenuItens"><a href="#inicio">inicio</a></li>
                     <li class="MenuItens"><a href="#eventos">eventos</a></li>
-                    <li class="MenuItens"><a href="#Tecnologias">contato</a></li></li>
+                    <li class="MenuItens"><a href="#RedesSociais">contato</a></li></li>
                   
                 </ul>
             </nav>
@@ -64,24 +64,15 @@
                     <h2>Título do evento</h2>
                     <p>Descrição do evento</p>
                 </div>
-                <div class="EventosItens">
-                    <img class="ImagensProjetos" src="imagens/evento img.jpg" alt="">
-                    <h2>Título do evento</h2>
-                    <p>Descrição do evento</p>
-                </div>
-                <div class="EventosItens">
-                    <img class="ImagensProjetos" src="imagens/evento img.jpg" alt="">
-                    <h2>Título do evento</h2>
-                    <p>Descrição do evento</p>
-                </div>
+        
             </div>
         </section>
         <!-- Seção de Contato -->
          <footer>
             <h1>CONTATO</h1>
             <div id="RedesSociais">
-                <img src="imagens/wpp logo.png" alt="logo whatsapp">
-                <img src="imagens/Instagram_logo.png" alt="logo instagram">
+                <a href="https://wa.me/75999901566" target="_blank"><img src="imagens/wpp logo.png" alt="logo whatsapp"></a>
+                <a href="https://www.instagram.com/matosdavi_/" target="_blank"><img src="imagens/Instagram_logo.png" alt="logo instagram"></a>
             </div>
          </footer>
 </body>
